{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 28,
  "lineage": "2e02d5b8-0c03-4d59-17ca-1a79ea74fe55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:211125647055:instance/i-04c7598a03ed98020",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c7598a03ed98020",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nvirginia-017",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ffc18bb3125600ee",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-54-167-65-194.compute-1.amazonaws.com",
            "public_ip": "54.167.65.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09eaca3de523a02ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f08fcd4dac5d449",
            "tags": {
              "Env": "add-new",
              "Name": "terraform-1",
              "Owner": "Rajesh"
            },
            "tags_all": {
              "Env": "add-new",
              "Name": "terraform-1",
              "Owner": "Rajesh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0882b542c55711f3f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_terraform",
            "aws_subnet.pub_sub_terraform",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125647055:internet-gateway/igw-05828308ded49d303",
            "id": "igw-05828308ded49d303",
            "owner_id": "211125647055",
            "tags": {
              "Name": "var.igw_tags"
            },
            "tags_all": {
              "Name": "var.igw_tags"
            },
            "vpc_id": "vpc-0fb4c4fe0921f4ff5"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125647055:route-table/rtb-0515e2e26fdd808d8",
            "id": "rtb-0515e2e26fdd808d8",
            "owner_id": "211125647055",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05828308ded49d303",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "var.rt_tags"
            },
            "tags_all": {
              "Name": "var.rt_tags"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb4c4fe0921f4ff5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_terraform",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e510e70c48f4f25b",
            "route_table_id": "rtb-0515e2e26fdd808d8",
            "subnet_id": "subnet-04f08fcd4dac5d449"
          },
          "dependencies": [
            "aws_internet_gateway.igw_terraform",
            "aws_route_table.rt_terraform",
            "aws_subnet.pub_sub_terraform",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125647055:security-group/sg-0882b542c55711f3f",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0882b542c55711f3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "var.sg_name",
            "name_prefix": "",
            "owner_id": "211125647055",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "var.sg_tags"
            },
            "tags_all": {
              "Name": "var.sg_tags"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb4c4fe0921f4ff5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125647055:subnet/subnet-04f08fcd4dac5d449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f08fcd4dac5d449",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125647055",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "var.pub_sn_tags"
            },
            "tags_all": {
              "Name": "var.pub_sn_tags"
            },
            "vpc_id": "vpc-0fb4c4fe0921f4ff5"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125647055:vpc/vpc-0fb4c4fe0921f4ff5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06843e7ba2a80a808",
            "default_route_table_id": "rtb-01153b7bbabf720ca",
            "default_security_group_id": "sg-06ff6ebe888c2004e",
            "dhcp_options_id": "dopt-0ebfa5fd4412c245b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb4c4fe0921f4ff5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01153b7bbabf720ca",
            "owner_id": "211125647055",
            "tags": {
              "Name": "var.vpc_tag_name"
            },
            "tags_all": {
              "Name": "var.vpc_tag_name"
            }
          }
        }
      ]
    }
  ]
}